# bmi088_zephyr_driver

./: CMakeLists.txt  Kconfig  README.md
drivers/sensor/bmi088/: bmi088_acc.c  bmi088_gyr.c
drivers/sensor/bosch/bmi088/: Kconfig  bmi088_acc.c  bmi088_gyr.c
dts/bindings/sensor/: bosch,bmi088-acc.yaml  bosch,bmi088-gyr.yaml
samples/sensor/bmi088/: CMakeLists.txt  README.md  prj.conf
samples/sensor/bmi088/boards/: teensy41.overlay
samples/sensor/bmi088/src/: main.cpp
zephyr/: module.yml
